# landing-zone

./: .gitignore  pyproject.toml
config/: settings.example.toml
db/: init.sh
db/ddl/: 00_create_database.sql  01_indicator_catalog.sql  02_macro_monthly.sql  03_market_daily.sql  04_quant_daily.sql  05_central_bank_events.sql  06_news_raw.sql  07_macro_snapshot_monthly.sql
db/procedures/: proc_build_monthly_snapshot.sql
db/seed/: indicator_catalog_seed.sql
docs/: db_architecture_v1_3.html  数据采购清单.md  智能投顾3_0_数据库设计方案_v1_3.md
src/aggregation/: build_snapshot.py  cov_matrix.py
src/etl/: load_macro_monthly.py  load_market_daily.py  load_quant_daily.py
src/quality/: checks.py
src/utils/: db.py
